--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,13 @@ jobs:
       - name: GitHub Action for Yarn
         # You may pin to the exact commit or the version.
         # uses: Borales/actions-yarn@4965e1a0f0ae9c422a9a5748ebd1fb5e097d22b9
-        uses: funkyremi/yarn-github-action@1.0.0
+        uses: Borales/actions-yarn@v2.3.0
         with:
           # Yarn command
           cmd: install
 
-      # - name: Building our App
-      #   run: npm run build
+      - name: Building our App
+        run: npm run build
       - name: Installing Surge
         run: npm install -g surge
 
